<resources>
    <string name="app_name">FreshlyBaked</string>
    <string name="title_recipestep_detail">Instruction Detail</string>
    <string name="internet_unavailable_message" translatable="false">Internet is not reachable</string>
    <string name="ingredient_alert_title" translatable="false">Ingredients:</string>
    <string name="ingredient_button_text" translatable="false">Show Ingredients</string>
    <string name="ingredient__widget_close_button_text" translatable="false">Close</string>
</resources>
